# veda-black-marble

./: .gitignore  README.md
docker/: Dockerfile  bm.py
notebooks/: bm-data-generator.ipynb  test-bm.ipynb
notebooks/bm_scripts/: __init__.py
sdk/veda-bm/: Build.md  README.rst  setup.cfg
sdk/veda-bm/src/veda_bm/: __init__.py
