# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
[metadata]
name = veda_bm
version = 0.0.1-alpha1
author = VEDA Developers
author_email = dimuthuw@gatech.edu
description = Python SDK for VEDA Black Marble Executions
long_description = Python SDK for VEDA Black Marble Executions
url = https://github.com/NASA-IMPACT/veda-black-marble
project_urls =
    Bug Tracker = https://github.com/NASA-IMPACT/veda-black-marble/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires=
    boto3>=1.28.82

[options.packages.find]
where = src